# cpp-patterns

./: .clang-format  CMakeLists.txt  README.md  install.sh  run.sh
doc/chain/: class_design_diagram.puml
doc/decorator/: class_design.puml
doc/observer/: class_design.puml
doc/state/: class_design.puml
include/cpp-patterns/messages/: Event.hpp
include/cpp-patterns/messages/argument_holder/: ArgumentHolder.hpp  ArgumentHolder.tpp
include/cpp-patterns/observer/: Notifier.hpp  Observer.hpp
include/cpp-patterns/singleton/: Singleton.hpp  Singleton.tpp
include/cpp-patterns/state/: Context.hpp  Context.tpp  ContextState.hpp  ContextState.tpp  State.hpp
include/cpp_patterns/application/: ChainApplication.hpp
include/cpp_patterns/argument_holder/: ArgumentHolder.hpp  ArgumentHolder.tpp
include/cpp_patterns/chain/: Link.hpp
include/cpp_patterns/flyweight/: FlyweightFactory.hpp  FlyweightFactory.tpp
include/cpp_patterns/observer/: Notifier.hpp  Observer.hpp
include/cpp_patterns/singleton/: Singleton.hpp
include/cpp_patterns/state/: Context.hpp  Context.tpp  ContextState.hpp  State.hpp
src/application/: ChainApplication.cpp
src/argument_holder/: ArgumentHolder.cpp
src/chain/: Link.cpp
src/messages/: Event.cpp
src/messages/argument_holder/: ArgumentHolder.cpp
src/observer/: Notifier.cpp  Observer.cpp
src/singleton/: Singleton.cpp
src/state/: Context.cpp  ContextState.cpp  State.cpp
test/: main.cpp
test/messages/: TestEvent.hpp  test_state_Event.cpp
test/messages/argument_holder/: test_argument_ArgumentHolder.cpp
test/messages/argument_holder/test_utils/: TestArgumentHolder.cpp  TestArgumentHolder.hpp
test/messages/test_utils/: TestEvent.hpp
test/observer/: test_observer_Notifier.cpp
test/observer/helpers/: TestNotifier.cpp  TestObserver.cpp  TestObserver.hpp
test/observer/test_utils/: TestNotifier.hpp  TestObserver.hpp
test/singleton/: test_singleton_Singleton.cpp
test/singleton/test_utils/: TestSingleton.cpp  TestSingleton.hpp
test/state/: test_state_Context.cpp  test_state_ContextState.cpp  test_state_Event.cpp
test/state/helpers/: TestContext.hpp  TestState.cpp  TestState.hpp
test/state/helpers/test_state/: FirstTestState.cpp  FirstTestState.hpp  SecondTestState.cpp  SecondTestState.hpp  TestState.cpp  TestState.hpp
test/state/test_utils/: TestContext.cpp
test/state/test_utils/test_state/: FirstTestState.cpp  TestState.cpp  TestState.hpp
test/state/test_utils/test_state/test_event/: TestEvent.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/argument_holder/: test_ArgumentHolder.cpp
tests/unit_tests/chain/: Link_tests.cpp
tests/unit_tests/chain/helpers/: TestLink.cpp  TestLink.hpp
tests/unit_tests/decorator/: Decorator_tests.cpp
tests/unit_tests/decorator/helpers/: TestComponent.cpp  TestComponent.hpp
tests/unit_tests/flyweight/: Flyweight_tests.cpp
tests/unit_tests/observer/: test_observer_Notifier.cpp
tests/unit_tests/observer/helpers/: TestObserver.cpp  TestObserver.hpp
tests/unit_tests/singleton/: test_singleton_Singleton.cpp
tests/unit_tests/singleton/test_utils/: TestSingleton.hpp
tests/unit_tests/state/: test_state_Context.cpp
tests/unit_tests/state/helpers/: TestState.cpp  TestState.hpp
