CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(cpp_patterns
        VERSION 0.0.1 LANGUAGES CXX)

ADD_COMPILE_OPTIONS(
        -std=c++14 -Wall -Wconversion -Wextra) # TODO : this is dirty

FIND_PACKAGE(Boost REQUIRED COMPONENTS
        unit_test_framework)

INCLUDE_DIRECTORIES( # TODO : is this needed ???
        include
        SYSTEM) # TODO : include boost directories

FILE(GLOB_RECURSE ${PROJECT_NAME}_HDRS
        include/${PROJECT_NAME}/*.hpp)

FILE(GLOB_RECURSE ${PROJECT_NAME}_TPPS
        include/${PROJECT_NAME}/*.tpp)

FILE(GLOB_RECURSE ${PROJECT_NAME}_SRCS
        src/*.cpp)

SET(${PROJECT_NAME}_files
        ${${PROJECT_NAME}_HDRS}
        ${${PROJECT_NAME}_TPPS}
        ${${PROJECT_NAME}_SRCS})

ADD_LIBRARY(${PROJECT_NAME} SHARED
        ${${PROJECT_NAME}_files})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
        ${Boost_LIBRARIES})

INCLUDE(GNUInstallDirs)

TARGET_INCLUDE_DIRECTORIES(
        ${PROJECT_NAME} PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

TARGET_COMPILE_DEFINITIONS(
        ${PROJECT_NAME} PRIVATE -D_EXPORT)

INSTALL(
        TARGETS ${PROJECT_NAME}
        EXPORT ${PROJECT_NAME}-config
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

INSTALL(
        EXPORT ${PROJECT_NAME}-config
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})

INSTALL(
        DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})


add_subdirectory(tests)
